﻿2007-02-27  Philipp Sehmisch  <tmw@crushnet.org>

	* gui/button.cpp, src/guibutton.h,
	src/gui/tabbedcontainer.cpp, src/gui/tabbedcontainer.h:: Tabbed
	containers now display the button of the active tab pressed all
	the time.
	* src/game.cpp, src/gui/chat.cpp, src/gui/chat.h, src/chathandler.cpp,
	src/net/chatserver/chatserver.cpp, src/net/chatserver/chatserver.h,
	src/channel.cpp, src/channel.h, src/channelmanager.cpp,
	src/channelmanager.h src/net/protocol.h: Implementation of chat
	channels by Trapdoor.
	* src/graphics.h: MSVC Compilation fix by Trapdoor.

2007-02-25  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/CMakeLists.txt: Updated CMake file.

2007-02-25  Rogier Polak  <rogier.l.a.polak@gmail.com>

	* src/main.h, src/main.cpp, src/game.h, src/game.cpp,
	src/gui/char_select.cpp, src/net/charserverhandler.cpp: Fixed small
	issue concerning SDL timers, removed a useless variable.

2007-02-23  Rogier Polak  <rogier.l.a.polak@gmail.com>

	* src/gui/char_select.h, src/gui/char_select.cpp,
	src/gui/unregisterdialog.h, src/gui/unregisterdialog.cpp,
	src/net/accountserver/account.h, src/net/accountserver/account.cpp,
	src/gui/quitdialog.h, src/gui/quitdialog.cpp,
	src/net/accountserver/accountserver.h,
	src/net/accountserver/accountserver.cpp, src/net/loginhandler.cpp,
	src/net/logouthandler.h, src/net/logouthandler.cpp, src/net/protocol.h,
	src/net/gameserver/gameserver.h, src/net/gameserver/gameserver.cpp,
	src/game.cpp, src/main.h, src/main.cpp: Added unregistering,
	logout_then_exit, switch_character and switch_accountserver.
	* src/lockedarray.h: Added a clear function that keeps the original
	size and data type.
	* src/logindata.h: Added a clear function.

2007-01-30  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/properties.h, src/being.cpp, src/beingmanager.h, src/sound.h,
	src/gui/window.h, src/sound.cpp, src/main.h, src/being.h,
	src/resources/soundeffect.h, src/resources/image.h,
	src/resources/mapreader.h, src/resources/music.h: Some trivial