@@ -31,7 +31,7 @@ class Monster : public Being
     public:
         Monster(Uint16 id, Uint16 job, Map *map);
 
-        virtual void setAction(Uint8 action);
+        virtual void setAction(Action action);
 
         virtual Type getType() const;
 };
