@@ -1,4 +1,11 @@
-﻿2007-02-27  Philipp Sehmisch  <tmw@crushnet.org>
+﻿2007-03-01  Philipp Sehmisch  <tmw@crushnet.org>
+
+	* src/being.cpp, src/being.h, src/localplayer.cpp, src/monster.cpp,
+	src/monster.h, src/net/beinghandler.cpp, src/net/beinghandler.h,
+	src/net/gameserver/player.cpp, src/net/gameserver/player.h,
+	src/net/protocol.h: Implemented communication of being action changes.
+
+2007-02-27  Philipp Sehmisch  <tmw@crushnet.org>
 
 	* gui/button.cpp, src/guibutton.h,
 	src/gui/tabbedcontainer.cpp, src/gui/tabbedcontainer.h:: Tabbed
